k8s/integration-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integration-app
  template:
    metadata:
      labels:
        app: integration-app
    spec:
      containers:
      - name: integration-app
        image: welkinoid/client-service:v1-7
        ports:
        - containerPort: 4000
