k8s/random-num-gen-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-num-gen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random-num-gen
  template:
    metadata:
      labels:
        app: random-num-gen
    spec:
      containers:
      - name: random-num-gen
        image: welkinoid/index:v1-9
        ports:
        - containerPort: 3000
