k8s/integration-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: integration-app-service
  namespace: default
spec:
  selector:
    app: integration-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
