k8s/random-num-gen.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-num-gen
  namespace: default
spec:
  selector:
    app: random-num-gen
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
