k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unified-nginx-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /integration(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: integration-app-service
                port:
                  number: 80

          - path: /random(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: random-num-gen-service
                port:
                  number: 80

          - path: /grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kube-prom-stack-grafana
                port:
                  number: 80

          - path: /prometheus(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kube-prom-stack-kube-prome-prometheus
                port:
                  number: 9090

          - path: /argocd(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
